# Signalpp

./: CMakeLists.txt  README.md  signal_manager.hpp  signal_service.hpp  signal_service_group.hpp
internal/: sigset_impl.hpp
